# tg_parser

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.secrets/: PG_DSN
docs/crawler/: README.md  architecture.puml  message_collection_sequence.puml  parser_class_diagram.puml  resource_management.puml  session_lifecycle.puml
scripts/: add_tg_acount.py
src/: __init__.py
src/chat_parser/: app.py  brokers.py  settings.py
src/chat_parser/database/: db.py  telegram.py  tg.py
src/chat_parser/database/ch/: db.py
src/chat_parser/database/pg/: db.py
src/chat_parser/database/pg/queries/: tables.py
src/chat_parser/database/pg/shemas/: __init__.py  base.py  message.py
src/chat_parser/database/shemas/: message.py
src/chat_parser/migrations/: alembic.ini  env.py
src/chat_parser/procedures/: parser.py
src/chat_parser/routes/: messages.py  parser.py
src/chat_parser/schemas/: parser.py
src/chat_parser/utils/: aware_datetime.py
src/common/utils/: aware_datetime.py  telegram_rate_limiter.py
src/common/utils/nats/: resource_manager.py
src/crawler/: __init__.py  app.py  brokers.py  settings.py
src/crawler/database/: __init__.py  tg.py
src/crawler/database/pg/: __init__.py  db.py
src/crawler/database/pg/queries/: __init__.py  session_entity.py
src/crawler/database/pg/schemas/: __init__.py  base.py
src/crawler/database/pg/schemas/telegram/: __init__.py  channel_metadata.py  collections.py  entities.py  mapping.py  session_entity_map.py  sessions.py
src/crawler/database/pg/shemas/: base.py  sessions.py
src/crawler/database/pg/shemas/telegram/: entities.py  mapping.py  sessions.py
src/crawler/migrations/: alembic.ini  env.py
src/crawler/migrations/versions/: 56331c0034b5_init.py  afd3993281a3_crate_tables.py  e766a37ae352_init.py
src/crawler/procedures/: __init__.py  new_channel.py  new_channels.py  parser.py  schedule.py
src/crawler/routes/: __init__.py  manage_resource.py  new_channel.py  schedule.py
src/crawler/schemas/: __init__.py  message.py  new_channel.py  parser.py  schedule.py
src/report_generator/: settings.py
src/report_generator/database/ch/: db.py
src/report_generator/database/pg/: db.py
src/report_generator/migrations/: env.py
tests/: __init__.py
tests/common/utils/nats/resource_manager/: conftest.py  test_resource_lock_manager_negative.py  test_resource_lock_manager_positive.py
tg_chat_parser/: __main__.py  crawler.py  settings.py  types.py
tg_chat_parser/database/: db.py
tg_chat_parser/database/shemas/: base.py  message.py
tg_chat_parser/migrations/: env.py
tg_chat_parser/migrations/versions/: a0cdda5054b1_add_message_table.py
