[project]
name = "GlideApps-chat-parser"
version = "0.0.1"
description = "GlideApps telegram-client parser"
authors = [
    {name = "Chebotarev Victor", email = "powersemmi@gmail.com"},
]
dependencies = [
    "telethon==1.29.*",
    "httpx==0.24.*",
    "sqlalchemy[asyncio]==2.0.*",
    "alembic==1.11.*",
    "asyncpg==0.28.*",
    "logging518==1.0.*",
    "pydantic==2.1.*",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
_.env_file = ".env"
# lint
black = "black ."
flake = "flake8p ."
isort = "isort ."
mypy = "mypy ."
lint = {composite = ["black", "flake", "isort", "mypy"]}
# migrates
migrate = "alembic upgrade head"
downgrade = "alembic downgrade"
makemigration = "alembic revision --autogenerate -m"
# run
main = "python -m src"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "isort>=5.12.0",
    "black>=23.7.0",
    "mypy>=1.4.1",
    "flake8-pyproject>=1.2.3",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
ignore = ["W291", "E203"]
exclude = [
    ".git",
    "__pycashe__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    "__pypackeges__"
]
max-line-length = 120
count = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdm.resolution]
respect-source-order = true

[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.simple]
format = "%(levelname)s | %(asctime)-20s | %(threadName)s | %(name)s | %(message)s"

[tool.logging.handlers.console]
formatter = "simple"
stream = "ext://sys.stdout"
class = "logging.StreamHandler"

[tool.logging.root]
level = "DEBUG"
handlers = ["console"]