[project]
name = "chat-parser"
version = "1.0.0"
description = "Telegram-client parser"
authors = [
    {name = "Chebotarev Victor", email = "powersemmi@gmail.com"},
]
dependencies = [
    "telethon==1.34.*",
    "httpx==0.27.*",
    "sqlalchemy[asyncio,mypy]==2.0.*",
    "alembic==1.13.*",
    "asyncpg==0.29.*",
    "logging518==1.0.*",
    "pydantic==2.7.*",
    "pydantic-settings==2.2.*",
    "orjson==3.10.*",
    "faststream[rabbit]==0.4.*",
    "pytz===2024.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.scripts]
_.env_file = ".env"
# lint
check = "python -m ruff check --fix --preview ."
format = "python -m ruff format --preview ."
mypy = "python -m mypy ."
lint = {composite = ["format", "check", "mypy"]}
# migrates
alembic = "alembic -c src/chat_parser/migrations/alembic.ini "
migrate = {composite = ["alembic upgrade head"]}
downgrade = {composite = ["alembic downgrade"]}
makemigration = {composite = ["alembic revision --autogenerate -m"]}
# run
main = "python -m tg_chat_parser"

[tool.pdm.dev-dependencies]
lint = [
    "ruff==0.1.*",
    "mypy==1.7.*",
    "types-PyYAML==6.0.*",
    "types-pytz==2024.1.*",

]
test = [
    "pytest==7.4.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==4.1.*",
]
docs = [
    "uvicorn==0.29.*",
    "fastapi==0.110.*",
]

[tool.pdm.options]
add = ["--no-isolation", "--no-self"]
install = ["--no-self", "--no-isolation"]
lock = ["--no-isolation"]

[tool.pdm.resolution]
respect-source-order = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 79
extend-select = [
    "I",    # isort
    "YTT",  # flake8-2020
    "ASYNC",# flake8-async
    "T20",  # flake8-print
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "LOG",  # flake8-logging
    "PT",   # flake8-pytest-style
    "C4",   # flake8-comprehensions
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    "W",    # pycodestyle
    "E",    # pycodestyle
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C90",  # mccabe
]
fixable = ["ALL"]
unfixable = []
extend-ignore = ["F401", "F841", "RUF003", "RUF002", "RUF006", "RUF001"]
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"src/tests/**.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 7

[tool.mypy]
plugins = "pydantic.mypy,sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
strict_equality = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["venv", "scripts", "tmp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.simple]
format = "%(levelname)s | %(asctime)-20s | %(threadName)s | %(name)s | %(message)s"

[tool.logging.handlers.console]
formatter = "simple"
stream = "ext://sys.stdout"
class = "logging.StreamHandler"

[tool.logging.root]
level = "DEBUG"
handlers = ["console"]